--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1888,65 +1888,65 @@
       "title": "我们收集的信息",
       "description": "我们收集您直接提供给我们的信息以及您使用我们的服务时我们自动获得的信息。",
       "personalInfo": {
-        "title": "个人信息",
-        "items": [
-          "姓名和联系信息",
-          "个人资料信息（职业、技能、兴趣）",
-          "位置数据（当您选择分享时）",
-          "旅行偏好和历史"
-        ]
+        "title": "个人信息"
       },
       "usageData": {
-        "title": "使用数据",
-        "items": [
-          "访问的页面和使用的功能",
-          "搜索查询和偏好",
-          "设备信息和浏览器类型",
-          "IP地址和大致位置"
-        ]
+        "title": "使用数据"
+      },
+      "personalInfoItems": {
+        "0": "姓名和联系信息",
+        "1": "个人资料信息（职业、技能、兴趣）",
+        "2": "位置数据（当您选择分享时）",
+        "3": "旅行偏好和历史"
+      },
+      "usageDataItems": {
+        "0": "访问的页面和使用的功能",
+        "1": "搜索查询和偏好",
+        "2": "设备信息和浏览器类型",
+        "3": "IP地址和大致位置"
       }
     },
     "howWeUseInfo": {
       "title": "我们如何使用您的信息",
       "description": "我们使用收集的信息来提供、改进和个性化我们的服务。",
-      "purposes": [
-        "提供和维护我们的服务",
-        "个性化您的体验",
-        "改进我们的平台和功能",
-        "发送重要更新和通知",
-        "回应您的询问和支持请求"
-      ]
+      "purposes": {
+        "0": "提供和维护我们的服务",
+        "1": "个性化您的体验",
+        "2": "改进我们的平台和功能",
+        "3": "发送重要更新和通知",
+        "4": "回应您的询问和支持请求"
+      }
     },
     "dataSharing": {
       "title": "数据共享和披露",
       "description": "我们不会向第三方出售、交易或出租您的个人信息。我们仅在以下情况下可能共享您的信息：",
-      "circumstances": [
-        "在您明确同意的情况下",
-        "为了遵守法律义务",
-        "为了保护我们的权利和安全",
-        "与协助运营我们平台的服务提供商（在严格的保密协议下）"
-      ]
+      "circumstances": {
+        "0": "在您明确同意的情况下",
+        "1": "为了遵守法律义务",
+        "2": "为了保护我们的权利和安全",
+        "3": "与协助运营我们平台的服务提供商（在严格的保密协议下）"
+      }
     },
     "dataSecurity": {
       "title": "数据安全",
       "description": "我们实施适当的安全措施来保护您的个人信息免受未经授权的访问、更改、披露或破坏。",
-      "measures": [
-        "传输和存储数据的加密",
-        "定期安全评估和更新",
-        "访问控制和身份验证",
-        "安全的数据存储和备份程序"
-      ]
+      "measures": {
+        "0": "传输和存储数据的加密",
+        "1": "定期安全评估和更新",
+        "2": "访问控制和身份验证",
+        "3": "安全的数据存储和备份程序"
+      }
     },
     "yourRights": {
       "title": "您的权利和选择",
       "description": "您有权：",
-      "rights": [
-        "访问和审查您的个人信息",
-        "更新或更正您的信息",
-        "删除您的账户和关联数据",
-        "选择退出某些通信",
-        "控制位置共享和权限"
-      ]
+      "rights": {
+        "0": "访问和审查您的个人信息",
+        "1": "更新或更正您的信息",
+        "2": "删除您的账户和关联数据",
+        "3": "选择退出某些通信",
+        "4": "控制位置共享和权限"
+      }
     },
     "cookies": {
       "title": "Cookie 和跟踪",
