Complete internationalization of tax deadline reminder and strategy guide components
- Internationalize TaxDeadlineReminder component:
  * Replace all hardcoded Chinese strings with translation keys
  * Update country names, deadline descriptions, and UI labels
  * Add comprehensive translation keys for all deadline-related content
  * Update status summary, action buttons, and reminder tips
  * Internationalize disclaimer and all user-facing text

- Internationalize TaxStrategyGuide component:
  * Replace hardcoded Chinese strings in strategy titles and descriptions
  * Update filter labels, difficulty levels, and category names
  * Internationalize success rate and advisor availability indicators
  * Add translation keys for all strategy guide UI elements

- Add comprehensive translation keys to en.json and zh.json:
  * tax.deadlines section with all deadline-related translations
  * tax.strategyGuide section with strategy and UI translations
  * Country names, deadline descriptions, and status messages
  * Filter options, difficulty levels, and category labels
  * Success rates, advisor indicators, and action buttons

- All tax module components now fully internationalized
- Build tested and confirmed working correctly
- Ready for multi-language support across all tax features

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1724,6 +1724,95 @@
     "title": "Reviews"
   },
   "tax": {
+    "deadlines": {
+      "title": "Tax Deadline Reminder",
+      "selectCountry": "Select your nationality country",
+      "statusSummary": "Status Summary",
+      "urgentDeadlines": "Urgent Deadlines",
+      "upcomingDeadlines": "Upcoming Deadlines",
+      "completed": "Completed",
+      "exportToCalendar": "Export to Calendar",
+      "copyUrgentDeadlines": "Copy Urgent Deadlines",
+      "showCompleted": "Show Completed",
+      "hideCompleted": "Hide Completed",
+      "yourTaxDeadlines": "Your Tax Deadlines",
+      "daysLeft": "days left",
+      "urgent": "Urgent: Please handle ASAP",
+      "reminderTips": "Reminder Tips",
+      "reminderTip1": "Set calendar reminders 2-4 weeks before each deadline",
+      "reminderTip2": "Consider applying for extensions (US citizens automatically get 2-month extension)",
+      "reminderTip3": "Keep important documents organized throughout the year",
+      "reminderTip4": "Consult tax professionals for complex situations",
+      "disclaimer": "Important Notice",
+      "disclaimerText": "This reminder system provides general tax deadline information. Actual deadlines may vary due to personal circumstances, extension applications, and other factors. Please refer to the latest information from official tax authorities and consult professional tax advisors for complex situations.",
+      "selectCountryToView": "Please select countries to view tax deadlines",
+      "noUrgentDeadlines": "🎉 No urgent tax deadlines!",
+      "dueToday": "Due today",
+      "daysAgo": " days ago",
+      "daysLeft": " days left",
+      "countries": {
+        "us": "United States",
+        "uk": "United Kingdom", 
+        "ca": "Canada",
+        "au": "Australia",
+        "ie": "Ireland"
+      },
+      "descriptions": {
+        "annualTaxReturn": "Annual Income Tax Return",
+        "fbarFiling": "FBAR Filing (Foreign Bank Accounts)",
+        "q1EstimatedTax": "Q1 Estimated Tax",
+        "q2EstimatedTax": "Q2 Estimated Tax",
+        "selfAssessment": "Self Assessment Filing",
+        "taxPayment": "Tax Payment",
+        "personalTaxReturn": "Personal Income Tax Return",
+        "selfEmployedFiling": "Self-Employed Filing"
+      }
+    },
+    "strategyGuide": {
+      "title": "Tax Strategy Guide",
+      "viewAdvisors": "View Advisors",
+      "difficultyFilter": "Difficulty Filter",
+      "allDifficulties": "All Difficulties",
+      "strategyType": "Strategy Type",
+      "allTypes": "All Types",
+      "strategies": {
+        "nhrPortugal": {
+          "title": "Portugal NHR Program (2024 Update)",
+          "description": "10-year preferential tax rate, but policy has been significantly tightened, limited to high-skilled professions"
+        },
+        "territorialTax": {
+          "title": "Territorial Tax Strategy",
+          "description": "Utilize territorial tax countries, foreign income tax-free, suitable for digital nomads"
+        },
+        "companyStructure": {
+          "title": "Company Structure Optimization",
+          "description": "Optimize tax structure through offshore companies, suitable for high-income business owners"
+        },
+        "digitalNomadVisa": {
+          "title": "Digital Nomad Visa",
+          "description": "Utilize specialized visas to optimize tax situation, simple and easy to implement"
+        },
+        "taxTreaty": {
+          "title": "Tax Treaty Optimization",
+          "description": "Utilize bilateral tax treaties to reduce double taxation"
+        }
+      },
+      "difficulty": {
+        "easy": "Easy",
+        "medium": "Medium", 
+        "hard": "Hard"
+      },
+      "categories": {
+        "taxHaven": "Tax Haven",
+        "territorial": "Territorial Tax",
+        "companyStructure": "Company Structure",
+        "visaStrategy": "Visa Strategy",
+        "taxTreaty": "Tax Treaty"
+      },
+      "successRate": "Success Rate",
+      "hasAdvisor": "Has Advisor",
+      "hideAdvisors": "Hide Advisors"
+    },
     "calculator": {
       "potentialSavings": "Potential Savings",
       "taxableIncome": "Taxable Income",
