--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -545,6 +545,95 @@
       "countries": "国家对比",
       "deadlines": "截止提醒"
     },
+    "deadlines": {
+      "title": "税务截止日期提醒",
+      "selectCountry": "选择你的国籍国家",
+      "statusSummary": "状态摘要",
+      "urgentDeadlines": "紧急截止日期",
+      "upcomingDeadlines": "即将到期",
+      "completed": "已完成",
+      "exportToCalendar": "导出到日历",
+      "copyUrgentDeadlines": "复制紧急截止日期",
+      "showCompleted": "显示已完成",
+      "hideCompleted": "隐藏已完成",
+      "yourTaxDeadlines": "你的税务截止日期",
+      "daysLeft": "天后",
+      "urgent": "紧急：请尽快处理",
+      "reminderTips": "提醒提示",
+      "reminderTip1": "在每个截止日期前2-4周设置日历提醒",
+      "reminderTip2": "考虑申请延期（美国公民自动获得2个月延期）",
+      "reminderTip3": "全年保持重要文档的有序组织",
+      "reminderTip4": "复杂情况请咨询税务专业人士",
+      "disclaimer": "重要声明",
+      "disclaimerText": "本提醒系统提供一般性税务截止日期信息。实际截止日期可能因个人情况、申请延期等因素而变化。请以官方税务机构的最新信息为准，并在复杂情况下咨询专业税务顾问。",
+      "selectCountryToView": "请选择国家以查看税务截止日期",
+      "noUrgentDeadlines": "🎉 没有紧急的税务截止日期！",
+      "dueToday": "今天到期",
+      "daysAgo": "天前",
+      "daysLeft": "天后",
+      "countries": {
+        "us": "美国",
+        "uk": "英国",
+        "ca": "加拿大",
+        "au": "澳大利亚",
+        "ie": "爱尔兰"
+      },
+      "descriptions": {
+        "annualTaxReturn": "年度所得税申报",
+        "fbarFiling": "FBAR申报（外国银行账户）",
+        "q1EstimatedTax": "第一季度预估税",
+        "q2EstimatedTax": "第二季度预估税",
+        "selfAssessment": "自我评估申报",
+        "taxPayment": "税务付款",
+        "personalTaxReturn": "个人所得税申报",
+        "selfEmployedFiling": "自雇人士申报"
+      }
+    },
+    "strategyGuide": {
+      "title": "税务策略指南",
+      "viewAdvisors": "查看顾问",
+      "difficultyFilter": "难度筛选",
+      "allDifficulties": "全部难度",
+      "strategyType": "策略类型",
+      "allTypes": "全部类型",
+      "strategies": {
+        "nhrPortugal": {
+          "title": "葡萄牙NHR计划（2024年更新）",
+          "description": "10年优惠税率，但政策已大幅收紧，仅限高技能职业"
+        },
+        "territorialTax": {
+          "title": "领土税制策略",
+          "description": "利用领土税制国家，外国收入免税，适合数字游民"
+        },
+        "companyStructure": {
+          "title": "公司结构优化",
+          "description": "通过离岸公司优化税务结构，适合高收入企业主"
+        },
+        "digitalNomadVisa": {
+          "title": "数字游民签证",
+          "description": "利用专门签证优化税务状况，简单易行"
+        },
+        "taxTreaty": {
+          "title": "税收协定优化",
+          "description": "利用双边税收协定减少双重征税"
+        }
+      },
+      "difficulty": {
+        "easy": "简单",
+        "medium": "中等",
+        "hard": "困难"
+      },
+      "categories": {
+        "taxHaven": "税务天堂",
+        "territorial": "领土税制",
+        "companyStructure": "公司结构",
+        "visaStrategy": "签证策略",
+        "taxTreaty": "税收协定"
+      },
+      "successRate": "成功率",
+      "hasAdvisor": "有顾问",
+      "hideAdvisors": "隐藏顾问"
+    },
     "currentStep": "当前步骤:",
     "step1": "1️⃣ 需求评估",
     "step2": "2️⃣ 税务计算",
