Fix profile page translation keys and add avatar upload functionality
- Add missing translation keys for profile page:
  - profile.editProfile, profile.profileCompleteness, profile.unlockMoreBadges, profile.completeInfoToUpgrade
  - profile.uploadAvatar, profile.avatarUploaded
  - Add corresponding Chinese translations

- Implement avatar upload functionality:
  - Add handleAvatarUpload function with file validation (image type, 5MB size limit)
  - Add uploadingAvatar state for loading indicator
  - Add hover overlay with camera icon and upload button on avatar
  - Use FileReader to convert image to base64 data URL
  - Save avatar to localStorage and update profile state immediately
  - Show success message after upload
  - Add proper error handling and user feedback

- UI/UX improvements:
  - Avatar now has hover effect with upload overlay
  - Loading spinner during upload process
  - Proper file type and size validation
  - Immediate visual feedback on successful upload
  - Maintains existing avatar display functionality

- Technical implementation:
  - Uses base64 encoding for local storage (no server upload required)
  - Maintains backward compatibility with existing avatar_url field
  - Proper TypeScript typing and error handling
  - Responsive design with proper accessibility

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -370,6 +370,30 @@
     "title": "Login Required"
   },
   "profile": {
+    "title": "Profile",
+    "subtitle": "Manage your digital nomad profile",
+    "name": "Name",
+    "currentCity": "Current City",
+    "currentCityExample": "e.g., Bangkok, Thailand",
+    "profession": "Profession",
+    "professionExample": "e.g., Software Developer",
+    "company": "Company",
+    "companyExample": "e.g., Remote Company",
+    "bioPlaceholder": "Tell us about yourself, your interests, and your digital nomad journey...",
+    "skills": "Skills",
+    "interests": "Interests",
+    "socialLinks": "Social Links",
+    "phone": "Phone",
+    "addSkill": "Add Skill",
+    "addInterest": "Add Interest",
+    "editProfile": "Edit Profile",
+    "save": "Save",
+    "saving": "Saving...",
+    "profileCompleteness": "Profile Completeness",
+    "unlockMoreBadges": "Unlock more badges",
+    "completeInfoToUpgrade": "Complete the following information to upgrade your profile:",
+    "uploadAvatar": "Upload Avatar",
+    "avatarUploaded": "Avatar uploaded successfully",
     "badges": {
       "profileStarter": "🔰 Profile Starter",
       "profilePro": "⭐ Profile Pro",
@@ -1802,7 +1826,7 @@
         "medium": "Medium", 
         "hard": "Hard"
       },
-      "categories": {
+    "categories": {
         "taxHaven": "Tax Haven",
         "territorial": "Territorial Tax",
         "companyStructure": "Company Structure",
