--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -2056,24 +2056,35 @@
   "profile": {
     "title": "个人资料",
     "subtitle": "管理您的个人信息和偏好设置",
+    "name": "姓名",
+    "currentCity": "当前城市",
+    "currentCityExample": "例如：曼谷，泰国",
+    "profession": "职业",
+    "professionExample": "例如：软件开发者",
+    "company": "公司",
+    "companyExample": "例如：远程公司",
+    "bioPlaceholder": "告诉我们关于您自己、您的兴趣爱好和数字游民之旅...",
+    "skills": "技能",
+    "interests": "兴趣爱好",
+    "socialLinks": "社交链接",
+    "phone": "电话",
+    "addSkill": "添加技能",
+    "addInterest": "添加兴趣",
+    "editProfile": "编辑资料",
+    "save": "保存",
+    "saving": "保存中...",
+    "profileCompleteness": "资料完整度",
+    "unlockMoreBadges": "解锁更多徽章",
+    "completeInfoToUpgrade": "完成以下信息以升级您的资料：",
+    "uploadAvatar": "上传头像",
+    "avatarUploaded": "头像上传成功",
     "edit": "编辑资料",
     "personalInfo": "个人信息",
-    "name": "姓名",
     "namePlaceholder": "请输入您的姓名",
-    "currentCity": "当前城市",
     "cityPlaceholder": "请输入您当前所在城市",
     "bio": "个人简介",
-    "bioPlaceholder": "告诉我们关于您自己...",
     "professional": "职业信息",
-    "profession": "职业",
-    "company": "公司",
-    "skills": "技能",
-    "addSkill": "添加技能",
-    "interests": "兴趣爱好",
-    "addInterest": "添加兴趣",
-    "socialLinks": "社交链接",
     "notSet": "未设置",
-    "save": "保存",
     "saving": "保存中...",
     "contact": "联系方式",
     "phone": "电话",
