Internationalize tax page country details (benefits, requirements, risks)
- Add comprehensive translation keys for all country tax information:
  - Portugal: NHR plan, wealth tax, inheritance tax, EU passport, cost of living, D7 visa
  - Thailand: foreign income exemption, visa convenience, capital gains tax, work permits
  - Mexico: territorial tax system, US tax treaty, digital nomad visa, tax residency
  - Spain: Beckham Law, EU passport, healthcare system, rich culture
  - Germany: infrastructure, strong economy, EU passport, healthcare system
  - Costa Rica: territorial tax system, foreign income exemption, digital nomad visa, nature
  - Malaysia: MM2H visa program, foreign income exemption, English proficiency, infrastructure

- Replace all hardcoded Chinese text in tax page with t() function calls
- Add corresponding English translations for all country details
- Organize translations by country with benefits, requirements, and risks sections
- Ensure consistent terminology across all countries
- Fix missing translation key for Costa Rica territorial tax system

- Technical implementation:
  - Use structured translation keys: countryDetails.{country}.{section}.{item}
  - Maintain existing functionality while adding internationalization
  - All country data now supports both Chinese and English languages
  - Proper TypeScript typing and error handling maintained

- User experience:
  - Tax page now fully supports language switching
  - All country information displays in user's selected language
  - Consistent translation quality across all countries
  - No more hardcoded Chinese text in tax module

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3001,5 +3001,115 @@
     "cities": "Cities",
     "tools": "Tools",
     "home": "Home"
+  },
+  "countryDetails": {
+    "portugal": {
+      "benefits": {
+        "nhrPlan": "NHR Plan: 10-year preferential tax rate (2024 policy tightened)",
+        "noWealthTax": "No wealth tax",
+        "noInheritanceTax": "No inheritance tax",
+        "euPassportAdvantage": "EU passport advantage",
+        "lowerCostOfLiving": "Relatively low cost of living",
+        "d7VisaAlternative": "D7 visa alternative"
+      },
+      "requirements": {
+        "applicationDeadline": "Application before January 1, 2024 (closed)",
+        "newStrictConditions": "Or meet new strict conditions",
+        "highSkillProfession": "High-skill profession, annual income over €75,000",
+        "residencyDays": "Reside in Portugal for more than 183 days per year",
+        "noPreviousResidency": "Cannot be Portuguese tax resident in past 5 years"
+      },
+      "risks": {
+        "nhrConditionsTightened": "NHR application conditions significantly tightened",
+        "proofRequired": "Need to prove high-skill profession and income",
+        "taxAuditRisk": "May face Portuguese tax authority review",
+        "policyChangeRisk": "Increased policy change risk"
+      }
+    },
+    "thailand": {
+      "benefits": {
+        "foreignIncomeExempt": "Foreign income not remitted is tax-free",
+        "lowCostOfLiving": "Low cost of living",
+        "visaConvenience": "Visa convenience",
+        "noCapitalGainsTax": "No capital gains tax",
+        "noInheritanceTax": "No inheritance tax"
+      },
+      "requirements": {
+        "noForeignIncomeRemittance": "Foreign income not remitted to Thailand",
+        "workPermitRequired": "Work permit required for work in Thailand",
+        "taxResidencyOver180Days": "Tax residency status required for over 180 days",
+        "maintainGoodRecords": "Maintain good records"
+      },
+      "risks": {
+        "remittedIncomeTaxed": "Remitted foreign income may be taxed",
+        "workPermitRestrictions": "Strict work permit restrictions",
+        "taxRegulationChanges": "Tax regulations may change"
+      }
+    },
+    "mexico": {
+      "benefits": {
+        "territorialTaxSystem": "Territorial tax system",
+        "foreignIncomeExempt": "Foreign income not remitted is tax-free",
+        "usTaxTreaty": "Tax treaty with the US",
+        "moderateCostOfLiving": "Moderate cost of living",
+        "digitalNomadVisa": "Digital nomad visa"
+      },
+      "requirements": {
+        "taxResidencyOver183Days": "Become tax resident for over 183 days",
+        "noForeignIncomeRemittance": "Foreign income not remitted to Mexico",
+        "mexicanIncomeTaxed": "Mexican income subject to tax",
+        "mayNeedFiling": "May need to file returns"
+      },
+      "risks": {
+        "remittedIncomeTaxed": "Remitted foreign income may be taxed",
+        "complexTaxFiling": "Complex tax filing",
+        "auditRisk": "May face audit"
+      }
+    },
+    "spain": {
+      "benefits": {
+        "beckhamLaw": "Beckham Law (preferential tax rate for first 5 years)",
+        "euPassport": "EU passport",
+        "qualityHealthcare": "Quality healthcare system",
+        "richCulture": "Rich culture"
+      }
+    },
+    "germany": {
+      "benefits": {
+        "qualityInfrastructure": "Quality infrastructure",
+        "strongEconomy": "Strong economy",
+        "euPassport": "EU passport",
+        "excellentHealthcare": "Excellent healthcare system"
+      }
+    },
+    "costaRica": {
+      "benefits": {
+        "territorialTaxSystem": "Territorial tax system",
+        "foreignIncomeExempt": "Foreign income not remitted is tax-free",
+        "digitalNomadVisa": "Digital nomad visa",
+        "beautifulNature": "Beautiful natural environment",
+        "moderateCostOfLiving": "Moderate cost of living"
+      },
+      "requirements": {
+        "taxResidencyOver183Days": "Become tax resident for over 183 days",
+        "noForeignIncomeRemittance": "Foreign income not remitted to Costa Rica",
+        "costaRicanIncomeTaxed": "Costa Rican income subject to tax",
+        "mayNeedFiling": "May need to file returns"
+      },
+      "risks": {
+        "remittedIncomeTaxed": "Remitted foreign income may be taxed",
+        "complexTaxFiling": "Complex tax filing",
+        "auditRisk": "May face audit"
+      }
+    },
+    "malaysia": {
+      "benefits": {
+        "mm2hVisaProgram": "MM2H visa program",
+        "foreignIncomeExempt": "Foreign income not remitted is tax-free",
+        "lowCostOfLiving": "Low cost of living",
+        "highEnglishProficiency": "High English proficiency",
+        "goodInfrastructure": "Good infrastructure"
+      }
+    }
   }
 } 
