--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -3270,5 +3270,115 @@
     "baliBeachCoworkingDesc": "海滩边的联合办公，享受阳光和海风",
     "enableLocationToDiscover": "启用定位以发现附近Nomads",
     "exploreGlobal": "探索全球"
+  },
+  "countryDetails": {
+    "portugal": {
+      "benefits": {
+        "nhrPlan": "NHR计划：10年优惠税率（2024年政策收紧）",
+        "noWealthTax": "无财富税",
+        "noInheritanceTax": "无遗产税",
+        "euPassportAdvantage": "欧盟护照优势",
+        "lowerCostOfLiving": "生活成本相对较低",
+        "d7VisaAlternative": "D7签证替代方案"
+      },
+      "requirements": {
+        "applicationDeadline": "2024年1月1日前申请（已截止）",
+        "newStrictConditions": "或符合新的严格条件",
+        "highSkillProfession": "高技能职业，年收入超过€75,000",
+        "residencyDays": "每年在葡萄牙居住超过183天",
+        "noPreviousResidency": "不能是过去5年的葡萄牙税务居民"
+      },
+      "risks": {
+        "nhrConditionsTightened": "NHR申请条件大幅收紧",
+        "proofRequired": "需要证明高技能职业和收入",
+        "taxAuditRisk": "可能面临葡萄牙税务局审查",
+        "policyChangeRisk": "政策变化风险增加"
+      }
+    },
+    "thailand": {
+      "benefits": {
+        "foreignIncomeExempt": "不汇入的外国收入免税",
+        "lowCostOfLiving": "生活成本低",
+        "visaConvenience": "签证便利",
+        "noCapitalGainsTax": "无资本利得税",
+        "noInheritanceTax": "无遗产税"
+      },
+      "requirements": {
+        "noForeignIncomeRemittance": "外国收入不汇入泰国",
+        "workPermitRequired": "在泰国工作需申请工作许可",
+        "taxResidencyOver180Days": "超过180天需申请税务居民身份",
+        "maintainGoodRecords": "保持良好记录"
+      },
+      "risks": {
+        "remittedIncomeTaxed": "汇入外国收入可能被征税",
+        "workPermitRestrictions": "工作许可限制严格",
+        "taxRegulationChanges": "税务规定可能变化"
+      }
+    },
+    "mexico": {
+      "benefits": {
+        "territorialTaxSystem": "领土税制",
+        "foreignIncomeExempt": "外国收入不汇入则免税",
+        "usTaxTreaty": "与美国有税收协定",
+        "moderateCostOfLiving": "生活成本适中",
+        "digitalNomadVisa": "数字游民签证"
+      },
+      "requirements": {
+        "taxResidencyOver183Days": "超过183天成为税务居民",
+        "noForeignIncomeRemittance": "外国收入不汇入墨西哥",
+        "mexicanIncomeTaxed": "墨西哥收入需纳税",
+        "mayNeedFiling": "可能需要提交申报"
+      },
+      "risks": {
+        "remittedIncomeTaxed": "汇入外国收入可能被征税",
+        "complexTaxFiling": "税务申报复杂",
+        "auditRisk": "可能面临审计"
+      }
+    },
+    "spain": {
+      "benefits": {
+        "beckhamLaw": "贝克汉姆法（前5年优惠税率）",
+        "euPassport": "欧盟护照",
+        "qualityHealthcare": "优质医疗系统",
+        "richCulture": "文化丰富"
+      }
+    },
+    "germany": {
+      "benefits": {
+        "qualityInfrastructure": "优质基础设施",
+        "strongEconomy": "强健经济",
+        "euPassport": "欧盟护照",
+        "excellentHealthcare": "优秀医疗系统"
+      }
+    },
+    "costaRica": {
+      "benefits": {
+        "territorialTaxSystem": "领土税制",
+        "foreignIncomeExempt": "外国收入不汇入免税",
+        "digitalNomadVisa": "数字游民签证",
+        "beautifulNature": "自然环境优美",
+        "moderateCostOfLiving": "生活成本适中"
+      },
+      "requirements": {
+        "taxResidencyOver183Days": "超过183天成为税务居民",
+        "noForeignIncomeRemittance": "外国收入不汇入哥斯达黎加",
+        "costaRicanIncomeTaxed": "哥斯达黎加收入需纳税",
+        "mayNeedFiling": "可能需要提交申报"
+      },
+      "risks": {
+        "remittedIncomeTaxed": "汇入外国收入可能被征税",
+        "complexTaxFiling": "税务申报复杂",
+        "auditRisk": "可能面临审计"
+      }
+    },
+    "malaysia": {
+      "benefits": {
+        "mm2hVisaProgram": "MM2H签证计划",
+        "foreignIncomeExempt": "外国收入不汇入免税",
+        "lowCostOfLiving": "生活成本低",
+        "highEnglishProficiency": "英语普及率高",
+        "goodInfrastructure": "基础设施良好"
+      }
+    }
   }
 } 
